--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Company Name</title>
 </head>
+
 <body>
-<div class="firstlogo">
-    <a href="#">Home</a>
-    <a href="#">Portfolio</a>
-    <a href="#">About me</a>
-    <a href="#">Contacts</a>
-</div>
+    <div class="firstlogo">
+        <a href="#">Contact ME</a>
+        <a href="#">About Me</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Home</a>
+    </div>
+    <div class="secondlogo">
+
+    </div>
 </body>
+
 </html>
