--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#">Portfolio</a>
         <a href="#">Home</a>
     </div>
-    <div class="secondlogo">
+    <div class="Workingarea">
 
     </div>
 </body>
