I comment in top
is me mene comment kiya hai sab se top me take bad me mujhe css me bar bar dosri class ya id ko na bolana parhe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+<!--first line div class="firstlogo"-->
+<!--Working area wali div div class="Workingarea"-->
+<!--working area ke andar jo heading hai us ki  class="headingnoone"-->
+<!--working area ke andar jo image hai us ki class="images"-->
     <div class="firstlogo">
         <a href="#">Contact ME</a>
         <a href="#">About Me</a>
