--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Company Name</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body>
-<!--first line div class="firstlogo"-->
-<!--Working area wali div div class="Workingarea"-->
-<!--working area ke andar jo heading hai us ki  class="headingnoone"-->
-<!--working area ke andar jo image hai us ki class="images"-->
+    <!--first line div class="firstlogo"-->
+    <!--Working area wali div div class="Workingarea"-->
+    <!--working area ke andar jo heading hai us ki  class="headingnoone"-->
+    <!--working area ke andar jo image hai us ki class="images"-->
+    <!--first line wali div ke andar mene aik logo banaya hai jis ka id hai ="logoheading"-->
     <div class="firstlogo">
+        <i class="fa-regular fa-user" style="background-color: rgb(148, 198, 253); margin-top: 20px; margin-left: 30px; letter-spacing: 5px; cursor: pointer;">Company Name</i>
         <a href="#">Contact ME</a>
         <a href="#">About Me</a>
         <a href="#">Portfolio</a>
-        <a href="#">Home</a>
+        <a href="#">Home</a>        
     </div>
     <div class="Workingarea">
         <center>
@@ -71,6 +74,8 @@
             <div id="imges">
                 <img
                     src="https://i.ytimg.com/vi/vI80J5Z3yto/hq720.jpg?sqp=-oaymwE2COgCEMoBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgB1AaAAuADigIMCAAQARhyIEgoOjAP&rs=AOn4CLBnz5M1p_w9OiJQihCu5LHOsjUJPg">
+                    <br>
+                    Maine roya ka thumbnail
             </div>
         </center>
     </div>
