Percentage work done

--- a/index.html
+++ b/index.html
@@ -17,67 +17,95 @@
     <!--working area ke andar jo image hai us ki class="images"-->
     <!--first line wali div ke andar mene aik logo banaya hai jis ka id hai ="logoheading"-->
     <div class="firstlogo">
-        <i class="fa-regular fa-user" style="background-color: rgb(148, 198, 253); margin-top: 20px; margin-left: 30px; letter-spacing: 5px; cursor: pointer;">Company Name</i>
+        <i class="fa-regular fa-user"
+            style="background-color: rgb(148, 198, 253); margin-top: 20px; margin-left: 30px; letter-spacing: 5px; cursor: pointer;">Company
+            Name</i>
         <a href="#">Contact ME</a>
         <a href="#">About Me</a>
         <a href="#">Portfolio</a>
-        <a href="#">Home</a>        
+        <a href="#">Home</a>
     </div>
-    <div class="Workingarea">
-        <center>
-            <h1 id="headingnoone">heading</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam asperiores dolores quis incidunt porro
-                ipsum in, laudantium eveniet fugiat officiis quae maxime ipsam pariatur, molestias nesciunt odit
-                repudiandae nihil? Nobis autem quaerat eius non deleniti fuga accusantium illo laboriosam, magni
-                veritatis excepturi amet quis suscipit, quos accusamus similique, quo alias?Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Adipisci dicta impedit ratione maiores exercitationem. Cupiditate facilis
-                minus temporibus autem optio perferendis, totam nemo aspernatur, ex, sapiente ducimus? Et voluptatem
-                quia perferendis cum dignissimos laborum non quasi commodi eligendi expedita unde libero earum illum
-                animi ipsam iure, magni voluptas quaerat repudiandae vero beatae tempore tenetur ad. Temporibus minus
-                illo eum. Corporis, iure necessitatibus ut, quibusdam nemo possimus dicta temporibus hic cumque
-                accusamus eum obcaecati alias inventore sapiente neque corrupti recusandae non odit laudantium aliquam!
-                Ea animi ullam recusandae nulla distinctio omnis, amet id! Similique, minus aperiam dolorem voluptatem
-                provident id nulla vitae sapiente tempore deserunt! Assumenda fugit consequuntur provident perferendis
-                eaque fugiat aliquam rem. Molestiae iusto laboriosam incidunt odit, mollitia ea adipisci sapiente
-                eveniet officiis pariatur labore natus aspernatur, iste in atque nam quibusdam voluptatum quos numquam
-                laborum perferendis nihil quis repellat! Eum fuga, culpa, est optio aliquid, provident fugit praesentium
-                dicta veritatis adipisci perferendis officia obcaecati odit autem. Alias voluptatum aspernatur, tenetur
-                vitae praesentium corporis vel soluta facilis! Vero tempore itaque, similique quam laborum omnis hic at
-                eligendi magnam totam nostrum eveniet ipsum veritatis accusamus soluta, molestias et quo nesciunt modi.
-                Commodi excepturi corrupti repellendus accusamus fuga nobis id, cupiditate magnam neque, porro odio
-                quidem eius consequuntur animi? Distinctio aliquam ducimus obcaecati alias reiciendis blanditiis aperiam
-                nobis deleniti debitis, veritatis porro voluptas praesentium eveniet consectetur delectus voluptatem
-                maiores, ex amet beatae. Esse, consectetur facilis! Quasi corrupti, quis quas minus eligendi asperiores
-                voluptatibus rerum nostrum quam iusto consectetur fugiat sit dolor impedit delectus. Facere, fugit,
-                neque sit nulla dicta cupiditate asperiores inventore perferendis magni, amet qui a nostrum sequi
-                consequuntur minus vel laborum harum debitis id eos. Voluptas praesentium perspiciatis itaque quaerat
-                quo deserunt atque autem dignissimos, numquam nesciunt officiis unde facilis quos suscipit, cum fugiat
-                nobis quasi cumque iure sit ullam, nostrum deleniti illo facere. Quos aliquam ipsa cumque nihil maxime
-                odio ipsum dolores. Temporibus itaque nam, quas soluta accusamus odio impedit beatae mollitia excepturi
-                laudantium explicabo ipsum, dolorum maxime eveniet similique amet cum optio omnis veniam dolor? Harum
-                mollitia aperiam rerum in, nam impedit! Similique, consectetur! Ex itaque iusto expedita explicabo
-                ducimus fuga iure vitae obcaecati debitis enim alias, maxime ad quis rerum eveniet quisquam voluptatem
-                voluptatum, cupiditate laudantium, est quaerat. Earum quaerat commodi ducimus in nihil rem facere quo
-                neque nisi fugit. Eius dolor quos placeat natus modi nam beatae corrupti. Culpa accusantium atque
-                praesentium sunt voluptatibus, ipsa, architecto eum explicabo quisquam mollitia veritatis facilis. Sed
-                laboriosam quae explicabo id corrupti! Rerum tenetur, aperiam suscipit facere illo molestiae
-                voluptatibus quia. Ipsam quae asperiores ab fuga, doloremque ex provident, aut aliquid recusandae,
-                laudantium atque tempore eaque. Ullam architecto numquam sit minus? Dolor mollitia expedita earum vitae
-                ducimus tenetur consequuntur hic magnam aut animi dolorum quia, odio illum recusandae cupiditate
-                dignissimos adipisci delectus atque quod amet sapiente rem velit ea libero. Accusantium fuga labore
-                assumenda. Exercitationem suscipit ipsa esse ea sunt ipsum temporibus non vel! Id maiores unde provident
-                nulla perspiciatis vel nemo molestias dolorem laborum! Possimus similique doloribus voluptatem?</p>
-            <h1 id="headingnoone">heading</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident corporis atque eos
-                quisquam facere reiciendis, fugiat obcaecati, eligendi molestiae magni, alias unde ipsa. Explicabo
-                necessitatibus quaerat perferendis commodi facere.</p>
-            <div id="imges">
-                <img
-                    src="https://i.ytimg.com/vi/vI80J5Z3yto/hq720.jpg?sqp=-oaymwE2COgCEMoBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgB1AaAAuADigIMCAAQARhyIEgoOjAP&rs=AOn4CLBnz5M1p_w9OiJQihCu5LHOsjUJPg">
+    <div class="father">
+        <div class="Workingarea">
+            <center>
+                <h1 id="headingnoone">heading</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam asperiores dolores quis incidunt
+                    porro
+                    ipsum in, laudantium eveniet fugiat officiis quae maxime ipsam pariatur, molestias nesciunt odit
+                    repudiandae nihil? Nobis autem quaerat eius non deleniti fuga accusantium illo laboriosam, magni
+                    veritatis excepturi amet quis suscipit, quos accusamus similique, quo alias?Lorem ipsum dolor sit
+                    amet
+                    consectetur adipisicing elit. Adipisci dicta impedit ratione maiores exercitationem. Cupiditate
+                    facilis
+                    minus temporibus autem optio perferendis, totam nemo aspernatur, ex, sapiente ducimus? Et voluptatem
+                    quia perferendis cum dignissimos laborum non quasi commodi eligendi expedita unde libero earum illum
+                    animi ipsam iure, magni voluptas quaerat repudiandae vero beatae tempore tenetur ad. Temporibus
+                    minus
+                    illo eum. Corporis, iure necessitatibus ut, quibusdam nemo possimus dicta temporibus hic cumque
+                    accusamus eum obcaecati alias inventore sapiente neque corrupti recusandae non odit laudantium
+                    aliquam!
+                    Ea animi ullam recusandae nulla distinctio omnis, amet id! Similique, minus aperiam dolorem
+                    voluptatem
+                    provident id nulla vitae sapiente tempore deserunt! Assumenda fugit consequuntur provident
+                    perferendis
+                    eaque fugiat aliquam rem. Molestiae iusto laboriosam incidunt odit, mollitia ea adipisci sapiente
+                    eveniet officiis pariatur labore natus aspernatur, iste in atque nam quibusdam voluptatum quos
+                    numquam
+                    laborum perferendis nihil quis repellat! Eum fuga, culpa, est optio aliquid, provident fugit
+                    praesentium
+                    dicta veritatis adipisci perferendis officia obcaecati odit autem. Alias voluptatum aspernatur,
+                    tenetur
+                    vitae praesentium corporis vel soluta facilis! Vero tempore itaque, similique quam laborum omnis hic
+                    at
+                    eligendi magnam totam nostrum eveniet ipsum veritatis accusamus soluta, molestias et quo nesciunt
+                    modi.
+                    Commodi excepturi corrupti repellendus accusamus fuga nobis id, cupiditate magnam neque, porro odio
+                    quidem eius consequuntur animi? Distinctio aliquam ducimus obcaecati alias reiciendis blanditiis
+                    aperiam
+                    nobis deleniti debitis, veritatis porro voluptas praesentium eveniet consectetur delectus voluptatem
+                    maiores, ex amet beatae. Esse, consectetur facilis! Quasi corrupti, quis quas minus eligendi
+                    asperiores
+                    voluptatibus rerum nostrum quam iusto consectetur fugiat sit dolor impedit delectus. Facere, fugit,
+                    neque sit nulla dicta cupiditate asperiores inventore perferendis magni, amet qui a nostrum sequi
+                    consequuntur minus vel laborum harum debitis id eos. Voluptas praesentium perspiciatis itaque
+                    quaerat
+                    quo deserunt atque autem dignissimos, numquam nesciunt officiis unde facilis quos suscipit, cum
+                    fugiat
+                    nobis quasi cumque iure sit ullam, nostrum deleniti illo facere. Quos aliquam ipsa cumque nihil
+                    maxime
+                    odio ipsum dolores. Temporibus itaque nam, quas soluta accusamus odio impedit beatae mollitia
+                    excepturi
+                    laudantium explicabo ipsum, dolorum maxime eveniet similique amet cum optio omnis veniam dolor?
+                    Harum
+                    mollitia aperiam rerum in, nam impedit! Similique, consectetur! Ex itaque iusto expedita explicabo
+                    ducimus fuga iure vitae obcaecati debitis enim alias, maxime ad quis rerum eveniet quisquam
+                    voluptatem
+                    voluptatum, cupiditate laudantium, est quaerat. Earum quaerat commodi ducimus in nihil rem facere
+                    quo
+                    neque nisi fugit. Eius dolor quos placeat natus modi nam beatae corrupti. Culpa accusantium atque
+                    praesentium sunt voluptatibus, ipsa, architecto eum explicabo quisquam mollitia veritatis facilis.
+                    Sed
+                    laboriosam quae explicabo id corrupti! Rerum tenetur, aperiam suscipit facere illo molestiae
+                    voluptatibus quia. Ipsam quae asperiores ab fuga, doloremque ex provident, aut aliquid recusandae,
+                    laudantium atque tempore eaque. Ullam architecto numquam sit minus? Dolor mollitia expedita earum
+                    vitae
+                    ducimus tenetur consequuntur hic magnam aut animi dolorum quia, odio illum recusandae cupiditate
+                    dignissimos adipisci delectus atque quod amet sapiente rem velit ea libero. Accusantium fuga labore
+                    assumenda. Exercitationem suscipit ipsa esse ea sunt ipsum temporibus non vel! Id maiores unde
+                    provident
+                    nulla perspiciatis vel nemo molestias dolorem laborum! Possimus similique doloribus voluptatem?</p>
+                <h1 id="headingnoone">heading</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident corporis atque eos
+                    quisquam facere reiciendis, fugiat obcaecati, eligendi molestiae magni, alias unde ipsa. Explicabo
+                    necessitatibus quaerat perferendis commodi facere.</p>
+                <div id="imges">
+                    <img
+                        src="https://i.ytimg.com/vi/vI80J5Z3yto/hq720.jpg?sqp=-oaymwE2COgCEMoBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgB1AaAAuADigIMCAAQARhyIEgoOjAP&rs=AOn4CLBnz5M1p_w9OiJQihCu5LHOsjUJPg">
                     <br>
                     Maine roya ka thumbnail
-            </div>
-        </center>
+                </div>
+            </center>
+        </div>
     </div>
 </body>
 
